--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^23.1.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-optimizer": "^1.4.2",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.24"
   }
