--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "electron-jue-jin",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.3",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "electron": "^23.1.1",
-    "electron-builder": "^23.6.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vite-plugin-optimizer": "^1.4.2",
-    "vue": "^3.2.45",
-    "vue-tsc": "^1.0.24"
+    "vite-plugin-optimizer": "^1.4.0",
+    "@vitejs/plugin-vue": "^3.0.0",
+    "electron": "^19.0.8",
+    "electron-builder": "^23.1.0",
+    "electron-updater": "^5.0.5",
+    "sass": "^1.54.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.0",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3",
+    "vue-tsc": "^0.38.4"
   }
 }
