--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts","./plugins/devPlugin.ts","./plugins/buildPlugin.ts"]
+  "include": ["vite.config.ts","./plugins/*.*"]
 }
